[tool.poetry]
name = "gridworks-proactor"
version = "0.3.1"
description = "Gridworks Proactor"
authors = ["Jessica Millar <jmillar@gridworks-consulting.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thegridelectric/gridworks-proactor"
repository = "https://github.com/thegridelectric/gridworks-proactor"
documentation = "https://gridworks-proactor.readthedocs.io"
packages = [
    { include = "gwproactor", from = "src" },
    { include = "gwproactor_test", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/thegridelectric/gridworks-proactor/releases"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"
python-dotenv = "^1.0.0"
pendulum = "^2.1.2"
xdg = "^6.0.0"
paho-mqtt = "^1.6.1"
result = "^0.9.0"
pytest = {version = ">=7.2.0", optional = true}
pytest-asyncio = {version = ">=0.20.3", optional = true}
gridworks-protocol = ">=0.5.6"
gridworks-cert = {version = ">=0.4.2", optional = true}
gridworks = "^0.2.9"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
sphinxcontrib-mermaid = "^0.8.1"

[tool.poetry.extras]
tests = ["pytest", "pytest-asyncio", "gridworks-cert"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gwproactor", "gwproactor_test", "tests"]

[tool.coverage.report]
show_missing = false
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = false
show_column_numbers = false
show_error_context = false
exclude = [
    "noxfile.py",
    "tests",
    "src/gwproactor_test",
]

[[tool.mypy.overrides]]
module = [
    "paho.mqtt.client",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
